--- a/problem-a/css/style.css
+++ b/problem-a/css/style.css
@@ -1,4 +1,64 @@
+* {
+  box-sizing: border-box; /* all elements include border and padding in size */
+  height: 100%;
+}
+
 body {
   font-family: "Lato", "Helvetica Neue", "Helvetica", sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  height: inherit;
+}
+
+.flex-container {
+  display: flex;
+  height: 100%;
+}
+
+.one {
+  flex-basis: 240px;
+}
+
+.two {
+  flex: 1;
+  background-color: #eee;
+  
+}
+
+.three {
+  flex-basis: 180px;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+.col {
+  padding: 1em;
+}
+
+.sub-flex-container  {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card {
+  flex: 0 0 250px;
+  background-color: white;
+  margin: .5rem;
+  border-radius: 10px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.16)	, 0 1px 3px rgba(0,0,0,0.23);
+}
+
+.card p {
+  padding: .5rem 1rem;
+}
+
+img {
+  border-radius: 10px 10px 0px 0px;
+}
+
+main {
+  display: flex;
+  flex: 1;
 }
